# file_organizer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/file_organizer/: directories.py  project.py
src/file_organizer_ha-anna/: directories.py  file_organizer.py
tests/: test_create_directories.py  test_create_directory.py  test_delete_files.py  test_get_delete_permission.py  test_get_directory_path.py  test_main.py  test_organize_files.py  test_validate_path.py
